Refactor: place-로깅 관련 코드 수정 및 추가